--- a/assets/css/sample.css
+++ b/assets/css/sample.css
@@ -87,6 +87,7 @@ h4 {
 
 h5 {
   font-size: 18px;
+  margin: 25px 0 15px;
 }
 
 h6 {
@@ -139,18 +140,13 @@ code {
 
 .leftbar {
   display: flex;
-  max-width: 260px;
-  transition: all 0.6s linear;
-  border-right: 1px solid #EBEBEB;
+  width: 300px;
   flex-direction: column;
-  height: 100%;
-  padding-bottom: 20px;
-  background: #FAFAFC;
   z-index: 1;
 }
 
 .leftbar.hide-on-mobile {
-    transition: all .6s linear;
+    /* transition: all .6s linear; */
 }
   
 @media screen and (max-width: 768px) {
@@ -267,7 +263,15 @@ code {
 .vertical-menu-icon .nav-pills .logobar {
   margin-bottom: 200px;
 }
-
+.menu-fold-wrap{
+  display: flex;  
+  z-index: 8;
+  justify-content: end;
+  padding: 25px 25px 10px;
+}
+.tab__content{
+  flex: 1;
+}
 
 *{
   font-weight: 400;
@@ -284,7 +288,7 @@ button{
 #containerbar{
   width: 100%;
   height: 100vh;
-  background-color: #fff;
+  background:#F8FAFB;
   border-radius: 4px;
   overflow: hidden;
   display: flex;
@@ -297,16 +301,18 @@ a.btn__dropdown:hover,a.btn__dropdown:active,a.btn__dropdown:focus {
 }
 .contentbar{padding:0px}
 .aside-right{
-  width: 300px;
+  width: 350px;
   background: #fff;
-  border-left: 1px solid #EBEBEB;
   display: flex;
   flex-direction: column;
+  border-top-left-radius: 40px;
+  border-bottom-left-radius: 40px;
+  padding-top: 10px;
+  box-shadow: rgba(0, 0, 0, 0.10) 0px 1px 4px;
 }
 
 .aside-right.min-size{
   width: 60px;
-  /* overflow: hidden; */
 }
 
 .aside-right.min-size .doca__detail{
@@ -317,21 +323,37 @@ a.btn__dropdown:hover,a.btn__dropdown:active,a.btn__dropdown:focus {
 }
 
 .leftbar.min-size{
-  overflow: hidden;
-  width: 60px;
+  /* overflow: hidden; */
+  width: 90px;
 }
 .unfold .doca-fold:before { content: '\e804'; }
 .sidebar{
   width: 260px;
 }
-.leftbar.min-size .logobar{
+.leftbar.min-size .vertical__menu__detail::before,.leftbar.min-size .vertical__menu__detail::after{
   display: none;
 }
-
-.leftbar.min-size .tab__wrapper{
+.leftbar.min-size .logobar{
+  padding: 30px 25px 25px;
+  overflow: hidden;
+  width: 90px;
+}
+.leftbar.min-size .logobar .logo-l{
   display: none;
+}
+.leftbar.min-size .logobar .logo-m{
+  display: block;
+}
+.leftbar.min-size .tab__wrapper{
+  /* display: none; */
 }
 .leftbar.min-size .vertical__menu__detail{
+  width: 90px;
+}
+.leftbar.min-size  .vertical__menu li a span{
+  display: none;
+}
+.leftbar.min-size  .vertical__menu > li .vertical__2dpt li{
   display: none;
 }
 .leftbar.min-size .storage__capacity{
@@ -339,7 +361,33 @@ a.btn__dropdown:hover,a.btn__dropdown:active,a.btn__dropdown:focus {
 }
 .vertical__menu__detail{
   flex: 1;
-  overflow-y: auto;
+  position: relative;
+  background:#227DF9;
+  border-radius: 0 40px 40px 0;
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 40px;
+}
+.vertical__menu__detail::before{
+  content: "";
+  width: 40px;
+  height: 40px;
+  background-color: #227DF9;
+  position:absolute;
+  top: -40px;
+  left: 0;
+  z-index: -1;
+}
+.vertical__menu__detail::after{
+  content: "";
+  width: 40px;
+  height: 40px;
+  background-color: #F8FAFB;
+  position:absolute;
+  border-radius: 0 0 0 40px;
+  top: -40px;
+  left: 0;
+  z-index: -1;
 }
 .btn__filemanage{
   display: block;
@@ -357,12 +405,19 @@ a.btn__dropdown:hover,a.btn__dropdown:active,a.btn__dropdown:focus {
   padding: 10px 30px;
 }
 .logobar{
-  padding: 30px 30px 10px;
+  padding: 30px 40px 25px;
   text-align: left;
+  background: #F8FAFB;
+  border-radius: 0 0 0 40px;
+  height: 100px;
+  box-sizing: border-box;
 }
 .logobar .img__fluid{
   width: 100%;
-  max-width: 180px;
+  max-width: 167px;
+}
+.logobar .img__fluid.logo-m{
+  display:none;
 }
 .footerbar {
   padding: 10px 0px;
@@ -372,73 +427,94 @@ a.btn__dropdown:hover,a.btn__dropdown:active,a.btn__dropdown:focus {
 }
 .vertical__menu{
   list-style: none;
-  padding: 0;
+  padding: 0 10px;
   text-align: left;
-  overflow-y: auto;
+  margin: 0;
+}
+.vertical__menu > li{
+  border-radius: 10px;
+  padding:10px;
+}
+.vertical__menu > li:hover{
+  background-color:rgba(255, 255, 255, 0.1);
+
+}
+.vertical__menu li.active {
+  background-color:rgba(255, 255, 255, 0.1);
+  border-radius: 10px;
 }
 .vertical__menu li a{
   width: 100%;
   font-size: 16px;
-  color: #222;
+  color: #fff;
   text-decoration: none;
   font-weight: 400;
-  padding: 10px 35px;
-  display: block;
+  display: flex;
+  justify-content: space-between;
   box-sizing: border-box;
 }
-.vertical__menu li a .doca-arrow-right-s-fill::before{
-  color:#BDBDBD;
+
+.vertical__menu li a span{
+  padding-left: 15px;
+  display: flex;
+  flex: 1;
+  justify-content: space-between;
+}
+
+.vertical__menu li a span .doca-arrow-right-s-fill::before{
   transition: all .2s;
+}
+
+.vertical__menu > li > a{
+  padding: 5px 15px;
+  /* margin-bottom: 5px; */
 }
 .vertical__menu > li.active > a{
   font-weight: bold;
-  color: #066AFF;
 }
 
-.vertical__menu > li.active > a > .doca-arrow-right-s-fill::before{
+.vertical__menu > li.active > a > span .doca-arrow-right-s-fill::before{
   transform:rotate(90deg);
-  color: #066AFF;
 }
-.vertical__menu > li.active > a > li.active > a > .doca-arrow-right-s-fill::before{
+.vertical__menu > li.active > a > li.active > a > span .doca-arrow-right-s-fill::before{
   transform:rotate(90deg);
-  color: #066AFF;
 }
 
 .vertical__menu > li .vertical__2dpt{
   display:none;
   list-style: none;
-  padding:0;
-  background: #fff;
+  padding:0
+}
+.vertical__menu > li .vertical__2dpt > li{
+  border-radius: 10px;
 }
 .vertical__menu > li .vertical__2dpt > li > a{
-  padding-left: 50px;
-  background: #FFF;
+  padding: 10px 15px 10px 54px;
+  border-radius: 10px;
 }
-.vertical__menu > li .vertical__2dpt > li:hover > a{
-  background: #E5F0FF;
-  color: #066AFF;
+.vertical__menu > li .vertical__2dpt > li:hover {
+  background: rgba(255, 255, 255, 0.1);
 }
-.vertical__menu > li .vertical__2dpt > li:hover > a .doca-arrow-right-s-fill::before{
-  color: #066AFF;
-}
-.vertical__menu > li .vertical__2dpt > li.active > a{
-  background: #E5F0FF;
-  color: #066AFF;
-}
-.vertical__menu > li .vertical__2dpt > li.active > a .doca-arrow-right-s-fill::before{
+
+.vertical__menu > li .vertical__2dpt > li.active > a span .doca-arrow-right-s-fill::before{
   transform:rotate(90deg);
-  color: #066AFF;
 }
 .vertical__menu > li .vertical__3dpt{
   display:none;
   list-style: none;
-  padding:0;
+  padding:0 10px;
+  padding-bottom: 10px;
+}
+.vertical__menu > li .vertical__3dpt li{
+  padding: 10px;
+  border-radius: 10px;
 }
 .vertical__menu > li .vertical__3dpt li a{
-  padding-left: 80px;
+  padding-left: 63px;
 }
-.vertical__menu > li .vertical__3dpt li:hover a{
+.vertical__menu > li .vertical__3dpt li:hover{
   font-weight: bold;
+  background: rgba(255, 255, 255, 0.1);
 }
 /* 메인콘텐츠 */
 .main-contents{
@@ -462,25 +538,26 @@ a.btn__dropdown:hover,a.btn__dropdown:active,a.btn__dropdown:focus {
   padding:5px 30px;
 }
 .main__header h2{
-  font-size: 24px;
+  font-size: 18px;
   margin:0;
 }
 .search__bar{
   display:flex;
   width: 100%;
-  padding:5px 30px;
+  padding: 10px 30px;
   box-sizing: border-box;
+}
+.search__bar .input__group{
+  background-color:#EFF2F8;
+  border-radius: 25px;
 }
 .search__bar input{
   flex:1;
-  padding:10px;
-  border:1px solid #EFEFEF;
+  padding: 0.735rem 1.5rem;
+  border:none;
   border-radius: 0;
-  background-color:#EFEFEF;
-  font-size: 14px;
-}
-.search__bar input:active,.search__bar input:hover,.search__bar input:focus{
-  border-color:#569FEC;
+  background-color:transparent;
+  font-size: 16px;
 }
 .search__bar input::placeholder{
   color:#B5B5B5;
@@ -489,9 +566,10 @@ a.btn__dropdown:hover,a.btn__dropdown:active,a.btn__dropdown:focus {
 .btn__doca{
   display: block;
   border-radius: 0;
-  padding:.5rem 1rem;
+  padding:.735rem 1.5rem;
   font-size: 16px;
   cursor: pointer;
+  height:50px;
 }
 .btn__default{
   background-color:transparent;
@@ -510,28 +588,35 @@ a.btn__dropdown:hover,a.btn__dropdown:active,a.btn__dropdown:focus {
   /* width: calc(1.35em + 1.1rem); */
   height: 40px;
   /* height: calc(1.35em + 1.1rem); */
-  font-size: 14px;
+  font-size: 16px;
   cursor: pointer;
+  border-radius: 50%;
+}
+.btn__icon-lg{
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  font-size: 19px;
 }
 .btn__icon:hover{
   background-color:#d5d5d58e;
 }
 .btn__white{
-  color:#fff;
+  background:#fff;
   transition: 0.1s linear;
 }
 .btn__white:hover{
   opacity: .5;
 }
 .btn__primary{
-  background-color:#569FEC;
-  border: 1px solid #569FEC;
+  background-color:#227DF9;
+  border: 1px solid #227DF9;
   color:#fff;
   transition:.1s linear;
 }
 .btn__primary:hover{
-  background-color:#438bd8;
-  border: 1px solid #438bd8;
+  background-color:#206bd4;
+  border: 1px solid #206bd4;
   /* box-shadow:inset 1px 1px 6px #333; */
 }
 .btn__primary2{
@@ -556,6 +641,16 @@ a.btn__dropdown:hover,a.btn__dropdown:active,a.btn__dropdown:focus {
   border: 1px solid #0149b6;
   /* box-shadow:inset 1px 1px 6px #333; */
 }
+.btn__secondary{
+  background-color:#EFF2F8;
+  border: 1px solid #EFF2F8;
+  color:#404040;
+  transition:.1s linear;
+}
+.btn__secondary:hover{
+  background-color:#e0e3e7;
+  border: 1px solid #e0e3e7;
+}
 .btn__primary-border{
   background-color:transparent;
   border: 1px solid #066AFF;
@@ -575,6 +670,16 @@ a.btn__dropdown:hover,a.btn__dropdown:active,a.btn__dropdown:focus {
 }
 .btn__gray-border:hover{
   box-shadow:inset 2px 2px 3px #ddd;
+}
+.btn__white-border{
+  background-color:transparent;
+  border: 1px solid #fff;
+  color:#fff;
+  transition:.1s linear;
+}
+.btn__white-border:hover{
+  background-color:#fff;
+  color:#066AFF;
 }
 .btn__upgrade{
   font-size: 13px;
@@ -614,20 +719,29 @@ a.btn__dropdown:hover,a.btn__dropdown:active,a.btn__dropdown:focus {
 .btn-column{
   flex-direction: column;
 }
+.doca-rounded-pill{
+  border-radius: 50rem;
+}
 
 
 .search__results-buttons{
-  padding: 8px 30px 12px;
+  padding: 10px 30px;
   display: flex;
   flex-wrap: wrap;
   gap: 5px;
 }
 .btn__group{
   display:flex;
-  gap: 5px;
+  gap: 10px;
 }
 .ml-auto{
   margin-left: auto;
+}
+.mr-1{
+  margin-right: 10px;
+}
+.mr-2{
+  margin-right: 20px;
 }
 .mt-1{
   margin-top: 10px;
@@ -657,7 +771,7 @@ a.btn__dropdown:hover,a.btn__dropdown:active,a.btn__dropdown:focus {
   margin-left: -10px;
 }
 .col__card{
-  width: 250px;
+  width: 275px;
   padding: 10px;
   box-sizing: border-box;
 }
@@ -665,10 +779,12 @@ a.btn__dropdown:hover,a.btn__dropdown:active,a.btn__dropdown:focus {
   position: relative;
   border: 1px solid #D7D7D7;
   box-sizing: border-box;
+  border-radius: 20px;
+  overflow: hidden;
+  background:#fff
 }
 .doca__card.active{
-  border: 1px solid #066AFF;
-  box-shadow: 0 0 0 3px rgba(0, 72, 255, 0.25);
+  border: 1px solid #0087F9;
 }
 .doca__card .doca__card-header{
   display:none;
@@ -690,11 +806,11 @@ a.btn__dropdown:hover,a.btn__dropdown:active,a.btn__dropdown:focus {
   display:flex;
   align-items: center;
   justify-content: space-between;
-  padding:5px;
+  padding:6px;
   position: absolute;
   width: 100%;
   box-sizing: border-box;
-  padding-left: 10px;
+  padding-left: 13px;
 }
 .doca__card-header:hover{
   
@@ -710,8 +826,9 @@ a.btn__dropdown:hover,a.btn__dropdown:active,a.btn__dropdown:focus {
 .control__check{
   height: 20px;
   width: 20px;
-  background: #fff;
-  border: 1px solid #066AFF;
+  background: rgba(255, 255, 255, 0.365);
+  border: 1px solid #efefef;
+  border-radius: 4px;
   display: block;
   position: relative;
 }
@@ -726,13 +843,14 @@ a.btn__dropdown:hover,a.btn__dropdown:active,a.btn__dropdown:focus {
   left: 6px;
   width: 6px;
   height: 9px;
-  border: solid #066AFF;
+  border: solid #fff;
   border-width: 0 2px 2px 0;
   transform: rotate(45deg);
 }
 input:checked ~ .control__check{
-  background: #E5F0FF;
-  border: 1px solid #066AFF;
+  background: #0087F9;
+  border: 1px solid #0087F9;
+  border-radius: 4px;
 }
 input:checked ~ .control__check:after{
   display: block;
@@ -756,7 +874,7 @@ input:checked ~ .control__check:after{
 .doca__card-title{
   font-size: 18px;
   margin: 0;
-  padding: 15px 10px 10px;
+  padding: 15px 15px 10px;
   overflow: hidden;
   height: 46px;
   margin-bottom: 4px;
@@ -778,7 +896,7 @@ input:checked ~ .control__check:after{
   margin-right: 5px;
 }
 .tag__group{
-  padding:5px 10px;
+  padding:5px 15px;
   display:flex;
   gap: 5px;
   flex-wrap: wrap;
@@ -809,7 +927,7 @@ input:checked ~ .control__check:after{
 }
 .doca__card-info{
   margin: 0;
-  padding: 5px 10px;
+  padding: 5px 15px;
   list-style: none;
   font-size: 14px;
   font-weight: 500;
@@ -833,25 +951,24 @@ input:checked ~ .control__check:after{
   flex: 1;
   border: 0;
   background: transparent;
-  padding: 0.6rem 1rem;
+  padding: 1rem;
   font-size: 16px;
   transition:.1s linear;
   border-right: 1px solid #D7D7D7;
 }
 .doca__card-footer .btn__download:hover{
-  background:#066AFF;
-  color: #fff;
+  background:#E6F0FF;
 }
 .doca__card-footer .btn__search{
-  background:#E6F0FF;
-  font-size: 16px;
+  flex: 1;
   border: 0;
-  color: #066AFF;
+  background: transparent;
+  padding: 1rem;
+  font-size: 16px;
   transition:.1s linear;
 }
 .doca__card-footer .btn__search:hover{
-  background:#066AFF;
-  color: #fff;
+  background:#E6F0FF;
 }
 
 /* user info */
@@ -879,11 +996,14 @@ input:checked ~ .control__check:after{
 .doca__detail{
   flex:1;
   overflow-y: auto;
-  padding: 0 18px 17px;
+  padding: 0 30px 17px;
+}
+.doca__detail .doca__card-img{
+  border-radius: 20px;
+  overflow: hidden;
 }
 .doca__detail-header{
   display: flex;
-  border-bottom: 1px solid #EBEBEB;
   align-items: center;
   padding: 10px;
 }
@@ -897,7 +1017,7 @@ input:checked ~ .control__check:after{
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  padding-left: 10px;
+  padding-left: 20px;
 }
 
 .doca__detail-warp .doca__detail-sub-title{
@@ -907,7 +1027,7 @@ input:checked ~ .control__check:after{
 }
 .doca__detail-info{
   margin: 0;
-  padding: 10px 0px;
+  padding: 20px 0px;
   list-style: none;
   font-size: 14px;
   font-weight: 500;
@@ -1025,38 +1145,57 @@ input:checked ~ .control__check:after{
   box-shadow: none;
 }
 /* 셀렉트 스타일 */
+select {
+  padding-right: 60px!important;
+  font-family: inherit;
+  background: url('../images/icon/select-box.svg') no-repeat 85% 50%;
+  border-radius: 0px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  }
+  
+  select::-ms-expand {
+      display: none;
+  }
+  
+
 .select2-container{
   min-width: 100px;
 }
 .select2-container--default .select2-selection--single {
-  background-color: #fff;
-  border: 1px solid #C4C4C4;
+  background-color: #EFF2F8;
+  border: 1px solid #EFF2F8;
   border-radius: 0px;
   font-weight: 400;
   font-size: 16px;
 }
 .select2-container .select2-selection--single{
-  height: 37px;
+  height: 45px;
+  border-radius: 20px;
 }
 .select2-container--default.select2-container--open.select2-container--below .select2-selection--single, 
 .select2-container--default.select2-container--open.select2-container--below .select2-selection--multiple{
-  background-color: #fff;
-  border: 1px solid #C4C4C4;
-  border-radius: 0;
+  background-color: #EFF2F8;
+  border: 1px solid #EFF2F8;
+  border-radius: 20px;
 }
 .select2-container--default .select2-selection--single .select2-selection__rendered{
   color: #222;
-  line-height: 35px;
+  line-height: 45px;
   padding: 0 1rem;
-  height: 35px;
+  height: 45px;
 }
 .select2-container--default .select2-selection--single .select2-selection__arrow{
   height: 35px;
+  top: 3px;
+  right: 10px;
 }
 .select2-dropdown{
-  border-radius: 0;
+  border-radius: 20px;
   font-weight: 400;
   color:#222;
+  overflow: hidden;
 }
 .select2-container--default .select2-results__option[aria-selected=true]{
   background-color: #E5F0FF;
@@ -1231,6 +1370,17 @@ input:checked ~ .control__check:after{
   color: #555;
   margin: 5px 0;
 }
+.grid__option-button{
+  display: flex;
+  background:#EFF2F8;
+  border-radius: 30px;
+  justify-items: center;
+}
+.grid__option-button button.on{
+  border: 1px solid #227DF9;
+  background:#fff;
+  color: #227DF9;
+}
 /* 모달창 */
 .doca__modal{
   display:none;
@@ -1321,6 +1471,7 @@ input:checked ~ .control__check:after{
   display:flex;
   gap:5px;
   align-items:center;
+  flex:1;
 }
 .check__group{
   height:35px;
@@ -1333,9 +1484,13 @@ input:checked ~ .control__check:after{
 /* 저장용량 */
 .storage__capacity{
   display: block;
-  margin-top: auto;
-  padding: 1em 25px;
   box-sizing: border-box;
+  padding: 0 10px;
+}
+.storage__capacity-wrap{
+  padding: 2em 40px;
+  border-radius: 20px;
+  background: rgba(255,255,255,0.1)
 }
 .storage__capacity h5{
   margin: 0;
@@ -1351,18 +1506,21 @@ input:checked ~ .control__check:after{
   overflow: hidden;
 }
 .storage__capacity-progress-bar{
-  background:  linear-gradient(180deg, #003990 -38.89%, rgba(153, 194, 255, 0.96) 1.46%, #2485EB 59.5%, #0046AE 150%);
+  background: linear-gradient(90deg, #FF8227 0%, #FFC327 99.89%, #FFC327 99.9%);
   height: 10px;
   border-radius: 5px;
   width: 0;
 }
 .storage__info{
-  color: #293B71;
+  color: #fff;
   display: block;
-  font-size: 14px;
+  font-size: 16px;
   margin: 5px 0 10px;
+  text-align: center;
 }
-
+.storage__info span{
+  color: #FFC327;
+}
 /* search 창 */
 .no-result{
   display: flex;
